--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title">Название</string>
     <string name="end_evnt">Конец события</string>
     <string name="description">Описание</string>
+    <string name="calendar">Календарь событий:</string>
 </resources>
